--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ body {
     width: 100vw;
     height: 100vh;
     font-family: 'Atkinson Hyperlegible', sans-serif;
-    font-size: 14px;
+    font-size: 17px;
     background-color: var(--bg-color);
     color: var(--text-color);
     transition: background-color 0.3s ease, color 0.3s ease;
@@ -233,7 +233,7 @@ blockquote cite:before {
 
 .content nav ul li {
     display: inline-block;
-    margin: 0 2em 0 0;
+    margin: 0em 2em 1em 0;
 }
 
 /* Arrow icon before navigation items */
@@ -499,10 +499,10 @@ ul.my-stuff > li:before {
 
 
 /* ========================================
-   RESPONSIVE DESIGN - MOBILE (<500px)
+   RESPONSIVE DESIGN - MOBILE (<600px)
    ======================================== */
 
-@media screen and (max-width: 499px) {
+@media screen and (max-width: 599px) {
     /* Hide theme toggle and language selector by default on mobile */
     .theme-toggle,
     .language-selector {
@@ -577,9 +577,8 @@ ul.my-stuff > li:before {
     /* Photo appears between info and summary on mobile */
     .vcard img {
         order: 3;
-        width: 120px;
-        height: 120px;
-        max-width: 120px;
+        width: 150px;
+        height: 150px;
         float: none;  /* Remove float on mobile */
         margin: 1.5em 0;
     }
@@ -587,10 +586,10 @@ ul.my-stuff > li:before {
 
 
 /* ========================================
-   RESPONSIVE DESIGN - DESKTOP (≥500px)
+   RESPONSIVE DESIGN - DESKTOP (≥600px)
    ======================================== */
 
-@media screen and (min-width: 500px) {
+@media screen and (min-width: 600px) {
     /* Main content container */
     .content {
         left: 50%;
@@ -616,7 +615,7 @@ ul.my-stuff > li:before {
 
     /* Profile photo size on desktop */
     .vcard img {
-        height: 120px;
-        width: 120px;
+        height: 150px;
+        width: 150px;
     }
 }
